# rivet-head-api

./: Cargo.toml  README.md  Shuttle.toml
schema/: schema.sql
src/lib/: lib.rs
src/lib/domain/: appstate.rs  diary_record.rs  mod.rs
src/lib/errors/: api_errors.rs  mod.rs
src/lib/instrumentation/: mod.rs  telemetry.rs
src/lib/middleware/: auth_key_middleware.rs  mod.rs
src/lib/routes/: diary.rs  health_check.rs  info.rs  mod.rs  not_found.rs
